# gtrsnipe

./: .gitignore  2.0.md  LICENSE-COMMERCIAL.md  README.md  debug_generator.py  fout.txt  hmm.py  input.mid  miditest.py  out.txt  pyproject.toml  tree.txt  x.tab
docs/: whitepaper.tex
docs/wiki/: 4.Example-Asturias_Leyenda.md
gtrsnipe/: arguments.py  converter.py
gtrsnipe/audio/: cleaner.py  distortion_remover.py  dynamic_tempo.py  pitch_detector.py  pitch_detector_bp.py  pitch_detector_librosa.py  pitch_detector_lr.py  separator.py  tempo_detector.py  toy_polyphonic_pitch_detector.py  vocoder.py  what_a_pitch.py
gtrsnipe/audio/models/hifi_GAN/: hifigan_inference.py
gtrsnipe/core/: config.py  theory.py  types.py
gtrsnipe/formats/: __init__.py  abc.py  mid.py  tab.py  vex.py
gtrsnipe/formats/abc/: __init__.py  generator.py  parser.py
gtrsnipe/formats/mid/: __init__.py  generator.py  reader.py
gtrsnipe/formats/tab/: __init__.py  parser.py  types.py
gtrsnipe/formats/tab/generator/: __init__.py  ascii.py  pdf.py
gtrsnipe/formats/vex/: __init__.py  generator.py  parser.py
gtrsnipe/guitar/: guitar_mapper.py  mapper.py
gtrsnipe/tools/: debug_generator.py  difftool.py
gtrsnipe/utils/: io.py  logger.py
src/: input.mid  mincomp.py  minimal_transpiler.py  test.py  transp.txt
src/gtrsnipe/: __init__.py
src/gtrsnipe/computer/: ast_compiler.py  basic_compiler.py  cpu.py  program.py
src/gtrsnipe/converters/: abc_to_midi.py  midi_to_tab.py  ops_to_tab.py  simple_ast_converter.py
src/gtrsnipe/core/: operations.py  tab.py  types.py
src/gtrsnipe/utils/: fretboard.py  guitar_mapper.py  notation.py
